--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,113 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.container {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+.profile-container {
+  transition: transform .5s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.description {
+  margin-top: 8px;
+  font-weight: 900;
+  font-size: 20px;
+  opacity: 0.2;
+}
+
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  padding: 15px;
+  margin: auto;
+}
+
+.image {
+  width: 120px;
+  height: 120px;
+  background-color: white;
+  border-radius: 50%;
+}
+
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 488px;
+  max-width: 800px;
+}
+
+
+.sites {
+  font-weight: 900;
+  font-size: 20px;
+  opacity: 0.5;
+}
+
+.card {
+  margin: 0.5rem;
+  flex-basis: 45%;
+  text-align: center;
+  background: #d5c7ff;
+
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  min-width: 350px;
+}
+
+@media only screen 
+    and (device-width: 390px) 
+    and (device-height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) { 
+      .container {
+        height: 850px;
+      }
+    }
+
+@media (max-width: 350px) {
+  .card {
+    min-width: 275px;
+  }
+  .card h3 {
+    margin: 0 3rem 0 3rem;
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 735px) {
+  .container {
+    height: 688px;
+  }
+  .grid {
+    width: 65%;
+    margin: auto;
+  }
+  .grid > a {
+    background: none;
+    border: none;
+  }
+
+  .card h3 {
+    margin: 0 3rem 0 3rem;
+    font-size: 1.25rem;
+  }
+}
+
+@media only screen 
+    and (device-width: 414px) 
+    and (device-height: 896px) 
+    and (-webkit-device-pixel-ratio: 2) { 
+      .container {
+        height: 900px;
+      }
+}
